# simpleplayer

./: .gitignore  CMakeLists.txt  README.md  debug.sh  gen.sh  update.sh
apps/: CMakeLists.txt  basic.cpp  hello_main.cpp
cmake/: FindFFmpeg.cmake
